--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">Rock, Paper, Sicssors</h1>
+        <h1 class="display-4">Rock, Paper, Sicssors</h1><hr>
         <h4>Win: <span id="win-text">0</span></h4>
         <h4>Losses: <span id="losses-text">0</span></h4>
         <h4>Ties: <span id="tie-text">0</span></h4>
         <h4>Number of rounds left: <span id="roundLeft-text">9</span></h4>
                 
-        <div class="container">
+        <div class="container" id="scoreBox">
             <div class="row">
                 <div class="col">
                     <h2>YOUR GUESS: <h1 id="yourGuess-text">0</h1></h2>
