centered rounds left

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 <body>
     <div class="jumbotron">
         <h1 class="display-4">Rock, Paper, Sicssors</h1><hr>
+        <div id="gameRounds">
+            <h4>Number of rounds left: <span id="roundLeft-text">9</span></h4>
+        </div>
         <h4>Win: <span id="win-text">0</span></h4>
         <h4>Losses: <span id="losses-text">0</span></h4>
         <h4>Ties: <span id="tie-text">0</span></h4>
-        <h4>Number of rounds left: <span id="roundLeft-text">9</span></h4>
                 
         <div class="container" id="scoreBox">
             <div class="row">
