--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <title>Rock, Paper, and Sicssors</title>
+    <title>Rock, Paper, and Scissor</title>
     <link rel="stylesheet" href="assets/css/style.css">
     
 </head>
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">Rock, Paper, Sicssors</h1><hr>
+        <h1 class="display-4">Rock, Paper, Scissor</h1><hr>
         <div id="gameRounds">
             <h4>Number of rounds left: <span id="roundLeft-text">9</span></h4>
-         
         </div>
         <h4>Win: <span id="win-text">0</span></h4>
         <h4>Losses: <span id="losses-text">0</span></h4>
